--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -36,6 +36,10 @@
   },
   "name": "@marklb/storybook-harness",
   "author": "Mark Berry (markberry867@gmail.com)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/storybookjs/testing-angular"
+  },
   "module": "dist/storybook-harness.esm.js",
   "size-limit": [
     {
